Fix list alignment

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ img {
     color: white
 }
 
+ul, ol {
+    list-style-position: inside;
+}
+
 h1 {
     font-size: 40px;
     color: #bd6440
